 - Port screenshot from GdkPixbuf to cairo
 - Fix the annoying parser build warnings in imagemap
 - Add a check-for-deprecated-procedures-in-script-fu make target
 - Update libpng code to not use deprecated API (file-mng and file-png)
 - Add an Item class to pygimp
 - Correct/update some labels and defaults in the JPEG plug-in's save dialog UI


Developer documentation:

 - Many updates


Source and build system:

 - Make cairo a global dependency, starting at libgimpcolor
 - Require poppler >= 0.12.4
 - Remove gimp-remote for good, it has been disabled for years


General:

 - Some more undeprecations now that we use GTK+ 2.24
 - Fix lots of warnings that are new in -Wall in GCC 4.6
 - Lots of bug fixes and cleanup
 - Lots of translation updates


Changes in GIMP 2.7.2
=====================


UI:

 - A lot of undeprecations due to GTK+ 2.22 and 2.24
 - Lots and lots of cairo porting, calls to gdk_draw_* are gone
 - Merge the cage transform tool from GSoC
 - Remove the old bitmap cursors completely and always use RGBA cursors
   also for compat cursors for old X servers
 - Add new GimpCanvasItem infrastructure with subclasses for everything
   that needs to be drawn on the canvas and port all tools to canvas items,
   this is a huge change that touches all tools and almost all display
   code, and which finally gets rid of XOR drawing altogether
 - Switch from purely idle-rendering the display to something that ensures
   a minimum framerate, so we don't fail to update under heavy load
 - Make the text tool handle RTL mode better
 - Change GimpColorMapEditor to use the newly added proxy GimpPalette
 - Replace the brush scale control in tool options by a brush size
   one that works in pixels, and does the right thing when the brush
   changes
 - Add new widget GimpSpinScale which is a scale with number entry,
   and use it in all tool options
 - Make the brush, pattern etc. selectors in tool options more
   compact and allow to directly jump to the editor dialogs