@@ -91,6 +91,7 @@ The following people have contributed code to GIMP:
  Saul Goode
  David Gowers
  Cameron Gregory
+ Eric Grivel
  Stephen Griffiths
  Pavel Grinfeld
  Dov Grobgeld
