@@ -71,6 +71,7 @@ Plug-ins:
  - Update libpng code to not use deprecated API (file-mng and file-png)
  - Add an Item class to pygimp
  - Correct/update some labels and defaults in the JPEG plug-in's save dialog UI
+ - Fix "Bug 596410 - gimp-image-get-filename returns NULL for imported files"
 
 
 Developer documentation:
